@@ -278,9 +278,12 @@ class Simulator(object):
         Simulator.wait_until_device_is_in_state(udid, Simulator.DeviceState.BOOTED, timeout_seconds)
         with timeout(seconds=timeout_seconds):
             while True:
-                state = subprocess.check_output(['xcrun', 'simctl', 'spawn', udid, 'launchctl', 'print', 'system']).strip()
-                if re.search("A[\s]+com.apple.springboard.services", state):
-                    return
+                try:
+                    state = subprocess.check_output(['xcrun', 'simctl', 'spawn', udid, 'launchctl', 'print', 'system']).strip()
+                    if re.search("A[\s]+com.apple.springboard.services", state):
+                        return
+                except subprocess.CalledProcessError:
+                    _log.warn("Error in checking Simulator boot status.")
                 time.sleep(1)
 
     @staticmethod
